<resources>
    <string name="app_name">Messages</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="welcome_to_messenger">Welcome to Messenger</string>
    <string name="create_account">create account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="display_name">Display Name</string>
    <string name="log_out">Log Out</string>
    <string name="account_setting">Account Setting</string>
    <string name="all_users">All Users</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="login">Login</string>
    <string name="this_is_main_page">This is main page</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_page">Request Page</string>
    <string name="chat_page">Chat Page</string>
    <string name="friends">Friends</string>
    <string name="hi_i_am_using_messenger">Hi i am using Messenger</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">change status</string>
</resources>
